--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,26 +1,97 @@
 body {
     margin: 0;
-    background-image: url(img/wood.jpeg);
-    background-position: center center;
-    background-size: cover;
-    background-attachment: fixed;
+    font-family: 'Roboto', sans-serif;
+    background: #2BC0E4;  /* fallback for old browsers */
+    background: -webkit-linear-gradient(to left, #EAECC6, #2BC0E4);  /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to left, #EAECC6, #2BC0E4); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 }
 
 #container {
-    max-width: 350px;
-    background: #fff;
-    margin: 5% auto;
+    max-width: 360px;
+    background: #e7e7e7;
+    margin: 100px auto;
+    box-shadow: 0 0 3px rgba(0, 0, 0, 0.2); 
 }
 
+/*****HEADER*****/
+#title {
+    background: #2980b9;
+    color: white;
+    margin: 0;
+    padding: 10px 20px;
+    text-transform: uppercase;
+    font-size: 24px;
+    font-weight: normal;
+}
+
+.plusIcon {
+    float: right;
+}
+
+/*****INPUT*****/
 #newTask {
-    display: none;
+    font-size: 18px;
+    color: #2980b9;
+    background-color: #e7e7e7;
+    width: 100%;
+    padding: 13px 13px 13px 20px;
+    box-sizing: border-box;
+    border: 3px solid rgba(0, 0, 0, 0);
 }
 
+#newTask:focus {
+    background: #fff;
+    border: 3px solid #2980b9;
+    outline: none;
+}
+
+/*****LIST OF TASKS*****/
 #list {
     list-style-type: none;
+    margin: 0;
+    padding: 0;
 }
 
-.done {
+li {
+    background: #fff;
+    height: 40px;
+    cursor: default;
+}
+
+li:nth-child(2n) {
+    background: #e7e7e7;
+}
+
+.task,
+.delete-btn {
+    display: inline-block;
+    box-sizing: border-box;
+    height: 40px;
+    padding-top: 10px;
+}
+
+.task {
+    width: 300px;
+    margin: 0;
+    color: #666;
+}
+
+.delete-btn {
+    width: 0;
+    margin-right: 20px;
+    color: #fff;
+    background-color: #e74c4c;
+    text-align: center;
+    transition: 0.2s linear;
+    opacity: 0;
+}
+
+li:hover .delete-btn {
+    width: 40px;
+    opacity: 1.0;
+}
+
+.completed {
     text-decoration: line-through;
     opacity: 0.5;
 }
